--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,9 @@
 #hello {
-    display: none;
+    display: flex;
+    justify-content: center;
 }
 
 .header {
-    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
@@ -18,19 +18,23 @@
     
 }
 
-#question-1 {
+.hide {
     display: none;
 }
 
-#question-2 {
-    /* display: flex; */
-}
+/* .questionElements {
 
-.answer {
-    
-}
+} */
 
-.qa-block {
+/* .qa-block {
     display: flex;
     flex-direction: column;
+} */
+
+#buttonSize {
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
